// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCalendar should create calendar starting at date 1`] = `
Array [
  Object {
    "date": 2000-01-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-03-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-03-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;

exports[`useCalendar should create default calendar 1`] = `
Array [
  Object {
    "date": 1999-12-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 1999-12-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-01-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": false,
    "isToday": true,
  },
  Object {
    "date": 2000-01-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-07T00:00:00.000Z,
    "dayOfMonth": "7",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-08T00:00:00.000Z,
    "dayOfMonth": "8",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-09T00:00:00.000Z,
    "dayOfMonth": "9",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-10T00:00:00.000Z,
    "dayOfMonth": "10",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-11T00:00:00.000Z,
    "dayOfMonth": "11",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-12T00:00:00.000Z,
    "dayOfMonth": "12",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-13T00:00:00.000Z,
    "dayOfMonth": "13",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-14T00:00:00.000Z,
    "dayOfMonth": "14",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-15T00:00:00.000Z,
    "dayOfMonth": "15",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-16T00:00:00.000Z,
    "dayOfMonth": "16",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-17T00:00:00.000Z,
    "dayOfMonth": "17",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-18T00:00:00.000Z,
    "dayOfMonth": "18",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-19T00:00:00.000Z,
    "dayOfMonth": "19",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-20T00:00:00.000Z,
    "dayOfMonth": "20",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-21T00:00:00.000Z,
    "dayOfMonth": "21",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-22T00:00:00.000Z,
    "dayOfMonth": "22",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-23T00:00:00.000Z,
    "dayOfMonth": "23",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-24T00:00:00.000Z,
    "dayOfMonth": "24",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-25T00:00:00.000Z,
    "dayOfMonth": "25",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-26T00:00:00.000Z,
    "dayOfMonth": "26",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-27T00:00:00.000Z,
    "dayOfMonth": "27",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-28T00:00:00.000Z,
    "dayOfMonth": "28",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-29T00:00:00.000Z,
    "dayOfMonth": "29",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-30T00:00:00.000Z,
    "dayOfMonth": "30",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-01-31T00:00:00.000Z,
    "dayOfMonth": "31",
    "isOutsideMonth": false,
    "isToday": false,
  },
  Object {
    "date": 2000-02-01T00:00:00.000Z,
    "dayOfMonth": "1",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-02T00:00:00.000Z,
    "dayOfMonth": "2",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-03T00:00:00.000Z,
    "dayOfMonth": "3",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-04T00:00:00.000Z,
    "dayOfMonth": "4",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-05T00:00:00.000Z,
    "dayOfMonth": "5",
    "isOutsideMonth": true,
    "isToday": false,
  },
  Object {
    "date": 2000-02-06T00:00:00.000Z,
    "dayOfMonth": "6",
    "isOutsideMonth": true,
    "isToday": false,
  },
]
`;
